<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            tools:title="@tools:sample/lorem" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/detail_activity_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_activity_iv_header"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/str_movie_poster_header"
                android:foreground="@drawable/gradient_black_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_movie_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detail_activity_iv_poster"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/str_movie_poster"
                android:src="@drawable/ic_movie_placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/detail_activity_iv_header"
                app:layout_constraintDimensionRatio="w,2:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_iv_header" />

            <TextView
                android:id="@+id/detail_activity_tv_title"
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/detail_activity_iv_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_iv_poster"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/detail_activity_tv_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_iv_header"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/detail_activity_tv_overview"
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/str_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_iv_poster" />

            <TextView
                android:id="@+id/detail_activity_tv_overview_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_tv_overview"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/detail_activity_tv_info"
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/str_infos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_tv_overview_content" />

            <TextView
                android:id="@+id/detail_activity_tv_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_homepage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_tv_info" />


            <TextView
                android:id="@+id/detail_activity_tv_homepage_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_activity_tv_homepage"
                tools:text="@tools:sample/lorem" />


            <TextView
                android:id="@+id/detail_activity_tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_tv_homepage_content" />


            <TextView
                android:id="@+id/detail_activity_tv_release_date_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_activity_tv_release_date"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/detail_activity_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_activity_tv_release_date_content" />

            <TextView
                android:id="@+id/detail_activity_tv_status_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_activity_tv_status"
                tools:text="@tools:sample/lorem" />

            <android.support.constraint.Barrier
                android:id="@+id/detail_activity_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="detail_activity_tv_homepage,detail_activity_tv_release_date"
                tools:ignore="MissingConstraints" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>